[gd_scene load_steps=24 format=2]

[ext_resource path="res://GameNarrativeDisplay/GameNarrativeDisplay.gd" type="Script" id=1]
[ext_resource path="res://fonts/Montserrat-Light.ttf" type="FontFile" id=2]
[ext_resource path="res://styles/MenuButton_HoverFocus.tres" type="StyleBox" id=3]
[ext_resource path="res://styles/MenuButton_Normal.tres" type="StyleBox" id=4]
[ext_resource path="res://styles/MenuButton_Pressed.tres" type="StyleBox" id=5]
[ext_resource path="res://shaders/white.png" type="Texture2D" id=6]
[ext_resource path="res://GameNarrativeDisplay/blur_shader_material.tres" type="Material" id=7]
[ext_resource path="res://styles/MenuButton_Focus.tres" type="StyleBox" id=8]
[ext_resource path="res://styles/MenuButton_Disabled.tres" type="StyleBox" id=9]
[ext_resource path="res://GameNarrativeDisplay/GamepadHint.tscn" type="PackedScene" id=10]
[ext_resource path="res://styles/dialogPanel.tres" type="StyleBox" id=11]
[ext_resource path="res://styles/dialogButtonPanel.tres" type="StyleBox" id=12]

[sub_resource type="FontFile" id=1]
font_path = "res://fonts/Montserrat-Regular.ttf"

[sub_resource type="FontFile" id=2]
font_data = SubResource( 1 )

[sub_resource type="FontFile" id=3]
font_path = "res://fonts/Montserrat-SemiBoldItalic.ttf"

[sub_resource type="FontFile" id=4]
size = 20
font_data = SubResource( 3 )

[sub_resource type="FontFile" id=5]
font_path = "res://fonts/Montserrat-Italic.ttf"

[sub_resource type="FontFile" id=6]
size = 20
font_data = SubResource( 5 )

[sub_resource type="FontFile" id=7]
font_path = "res://fonts/Montserrat-SemiBold.ttf"

[sub_resource type="FontFile" id=8]
size = 20
font_data = SubResource( 7 )

[sub_resource type="FontFile" id=9]
font_data = ExtResource( 2 )

[sub_resource type="FontFile" id=10]
font_path = "res://fonts/Montserrat-Medium.ttf"

[sub_resource type="FontFile" id=11]
size = 15
font_data = SubResource( 10 )

[node name="MessageBox" type="CanvasLayer"]
process_mode = 2
layer = 12
script = ExtResource( 1 )

[node name="MessageBoxUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="Background" type="TextureRect" parent="MessageBoxUI"]
self_modulate = Color( 0.658824, 0.658824, 0.658824, 1 )
material = ExtResource( 7 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
expand = true

[node name="Vbox" type="VBoxContainer" parent="MessageBoxUI"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -344.0
offset_right = 320.0
offset_bottom = 344.0
custom_constants/separation = 0
alignment = 1

[node name="Panel" type="PanelContainer" parent="MessageBoxUI/Vbox"]
offset_top = 236.0
offset_right = 640.0
offset_bottom = 347.0
custom_styles/panel = ExtResource( 11 )

[node name="Message" type="RichTextLabel" parent="MessageBoxUI/Vbox/Panel"]
offset_left = 20.0
offset_top = 20.0
offset_right = 620.0
offset_bottom = 91.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_fonts/mono_font = SubResource( 2 )
custom_fonts/bold_italics_font = SubResource( 4 )
custom_fonts/italics_font = SubResource( 6 )
custom_fonts/bold_font = SubResource( 8 )
custom_fonts/normal_font = SubResource( 9 )
bbcode_enabled = true
text = "[center][b]Are you sure?[/b]

This will delete your current world and progress.[/center]"
text = "Are you sure?

This will delete your current world and progress."
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPanel" type="PanelContainer" parent="MessageBoxUI/Vbox"]
offset_top = 347.0
offset_right = 640.0
offset_bottom = 416.0
custom_styles/panel = ExtResource( 12 )

[node name="HBoxContainer" type="HBoxContainer" parent="MessageBoxUI/Vbox/ButtonPanel"]
offset_left = 20.0
offset_top = 20.0
offset_right = 620.0
offset_bottom = 49.0
custom_constants/separation = 15
alignment = 1

[node name="Button1" type="Button" parent="MessageBoxUI/Vbox/ButtonPanel/HBoxContainer"]
offset_left = 21.0
offset_right = 149.0
offset_bottom = 29.0
custom_minimum_size = Vector2( 128, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 4 )
text = "BUTTON1"

[node name="Button2" type="Button" parent="MessageBoxUI/Vbox/ButtonPanel/HBoxContainer"]
offset_left = 164.0
offset_right = 292.0
offset_bottom = 29.0
custom_minimum_size = Vector2( 128, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 4 )
text = "BUTTON2"

[node name="Button3" type="Button" parent="MessageBoxUI/Vbox/ButtonPanel/HBoxContainer"]
offset_left = 307.0
offset_right = 435.0
offset_bottom = 29.0
custom_minimum_size = Vector2( 128, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 4 )
text = "BUTTON3"

[node name="Button4" type="Button" parent="MessageBoxUI/Vbox/ButtonPanel/HBoxContainer"]
offset_left = 450.0
offset_right = 578.0
offset_bottom = 29.0
custom_minimum_size = Vector2( 128, 0 )
custom_fonts/font = SubResource( 11 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 5 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = ExtResource( 9 )
custom_styles/normal = ExtResource( 4 )
text = "BUTTON4"

[node name="Spacer" type="Control" parent="MessageBoxUI/Vbox"]
offset_top = 416.0
offset_right = 640.0
offset_bottom = 428.0
custom_minimum_size = Vector2( 0, 12 )

[node name="GamepadHint" parent="MessageBoxUI/Vbox" instance=ExtResource( 10 )]
offset_left = 0.0
offset_top = 428.0
offset_right = 640.0
offset_bottom = 452.0

[node name="ColorRect" type="ColorRect" parent="MessageBoxUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -136.0
offset_right = 320.0
offset_bottom = 8.0
color = Color( 0.396078, 0.396078, 0.396078, 0.870588 )

[node name="ColorRect2" type="ColorRect" parent="MessageBoxUI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -318.0
offset_top = -134.0
offset_right = 318.0
offset_bottom = 6.0
color = Color( 0.0862745, 0.0862745, 0.0862745, 0.956863 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="MessageBoxUI/Vbox/ButtonPanel/HBoxContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="MessageBoxUI/Vbox/ButtonPanel/HBoxContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="MessageBoxUI/Vbox/ButtonPanel/HBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="MessageBoxUI/Vbox/ButtonPanel/HBoxContainer/Button4" to="." method="_on_Button4_pressed"]
